[package]
name = "guryvsr"
version = "1.0.0"
description = "Rust implementation of the esoteric programming language gur yvsr"
license = "Apache-2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/placeholded/gur-yvsr"
keywords = ["esolang", "esoteric", "language"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.11.2"
